# gpg-keytag

./: Cargo.toml  README.md
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml
.github/workflows/: cflite.yml  rust.yml  scorecard.yml  scorecards-analysis.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: deserialization.rs  serialization_round_trip.rs
src/: keyfile.rs  main.rs
