[package]
name = "gpg-keytag"
version = "0.1.0"
authors = ["Grégoire Détrez <gregoire@fripost.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
nom = "6.2.1"
structopt = "0.3.22"
arbitrary = { version = "1", optional = true, features = ["derive"] }
