[package]
name = "gpg-keytag"
version = "0.1.0"
authors = ["Grégoire Détrez <gregoire@fripost.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
nom = "7.1.3"
arbitrary = { version = "1", optional = true, features = ["derive"] }
